@@ -1,3 +1,8 @@
+2014-02-09  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* The custom signup form `save` has been deprecated in favour of a
+	`def signup(request, user)` method.
+
 2014-02-04  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added Bitbucket provider.
